[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ui/menus/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/menus/UIMenu.tscn" type="PackedScene" id=2]

[node name="OptionsMenu" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Label" parent="Menu/Title" index="0"]
margin_left = 242.0
margin_right = 525.0
text = "ui_title_options_menu"

[node name="Options" type="CenterContainer" parent="Menu/Container" index="0"]
margin_right = 768.0
margin_bottom = 272.0
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="Menu/Container/Options" index="0"]
margin_left = 134.0
margin_top = 90.0
margin_right = 634.0
margin_bottom = 182.0
custom_constants/separation = 20

[node name="Sound" type="HBoxContainer" parent="Menu/Container/Options/List" index="0"]
margin_right = 500.0
margin_bottom = 16.0
rect_min_size = Vector2( 500, 0 )
custom_constants/separation = 14

[node name="Label" type="Label" parent="Menu/Container/Options/List/Sound" index="0"]
margin_top = 1.0
margin_right = 194.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "ui_slider_music_volume"
align = 2

[node name="HSlider" type="HSlider" parent="Menu/Container/Options/List/Sound" index="1"]
margin_left = 208.0
margin_right = 500.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
max_value = 1.0
step = 0.01

[node name="Mouse" type="HBoxContainer" parent="Menu/Container/Options/List" index="1"]
margin_top = 36.0
margin_right = 500.0
margin_bottom = 52.0
rect_min_size = Vector2( 500, 0 )
custom_constants/separation = 14

[node name="Label" type="Label" parent="Menu/Container/Options/List/Mouse" index="0"]
margin_top = 1.0
margin_right = 194.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "ui_slider_mouse_sensitivity"
align = 2

[node name="HSlider" type="HSlider" parent="Menu/Container/Options/List/Mouse" index="1"]
margin_left = 208.0
margin_right = 500.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
max_value = 1.0
step = 0.01

[node name="Locales" type="HBoxContainer" parent="Menu/Container/Options/List" index="2"]
margin_top = 72.0
margin_right = 500.0
margin_bottom = 92.0
rect_min_size = Vector2( 500, 0 )
custom_constants/separation = 14

[node name="Label" type="Label" parent="Menu/Container/Options/List/Locales" index="0"]
margin_top = 3.0
margin_right = 194.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "ui_select_lang"
align = 2

[node name="OptionButton" type="OptionButton" parent="Menu/Container/Options/List/Locales" index="1"]
margin_left = 208.0
margin_right = 282.0
margin_bottom = 20.0
size_flags_horizontal = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
text = "English"

[node name="CenterContainer" type="CenterContainer" parent="Menu/Footer" index="0"]
margin_right = 768.0
margin_bottom = 64.0
size_flags_vertical = 3

[node name="Back" type="Button" parent="Menu/Footer/CenterContainer" index="0"]
margin_left = 341.0
margin_top = 16.0
margin_right = 427.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 32 )
text = "ui_btn_back"
flat = true
[connection signal="value_changed" from="Menu/Container/Options/List/Sound/HSlider" to="." method="_on_Music_Slider_value_changed"]
[connection signal="value_changed" from="Menu/Container/Options/List/Mouse/HSlider" to="." method="_on_Mouse_Slider_value_changed"]
[connection signal="item_selected" from="Menu/Container/Options/List/Locales/OptionButton" to="." method="_on_MenuButton_item_selected"]
[connection signal="pressed" from="Menu/Footer/CenterContainer/Back" to="." method="_on_Back_pressed"]
